force-app/main/default/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of hours that are completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Completed_Hours__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Jobs__c</fullName>
        <label>Volunteer Jobs</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Shifts__c</fullName>
        <label>Volunteer Shifts</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Shifts__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteers_Still_Needed__c</fullName>
        <label>Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Bounce_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Average click rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Click_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average click rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Average open rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Open_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average open rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Unsubscribe_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>The date/time of the last Update on the Campaign record.</description>
        <inlineHelpText>The date/time of the last Update on the Campaign record.</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Message_Statistic_Count__c</fullName>
        <description>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</description>
        <inlineHelpText>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</inlineHelpText>
        <label>Message Statistic Count</label>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Targeted Join Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <defaultValue>today() + 1</defaultValue>
        <label>Targeted Join Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Bounce_Rate__c</fullName>
        <description>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</description>
        <inlineHelpText>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</inlineHelpText>
        <label>Total Bounce Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Bounce_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Click_Rate__c</fullName>
        <description>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</description>
        <inlineHelpText>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</inlineHelpText>
        <label>Total Click Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Click_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Open_Rate__c</fullName>
        <description>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</description>
        <inlineHelpText>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</inlineHelpText>
        <label>Total Open Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Open_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Unsubscribe_Rate__c</fullName>
        <description>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</description>
        <inlineHelpText>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</inlineHelpText>
        <label>Total Unsubscribe Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Unsubscribe_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Volunteer_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
        <columns>GW_Volunteers__Volunteer_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Volunteer_Jobs__c</columns>
        <columns>GW_Volunteers__Volunteers_Still_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.GW_Volunteers__Volunteers_Campaign</value>
        </filters>
        <label>Volunteer Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Volunteers__Volunteers_Campaign</fullName>
        <active>true</active>
        <description>A campaign specifically used to track Volunteers</description>
        <label>Volunteer Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>iContact_Email_Campaign</fullName>
        <active>true</active>
        <description>Use this record type for Mass Email with iContact</description>
        <label>Mass Email Campaign</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>